[refactor] component 분리

--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,196 +1,3 @@
-.initial-container{
-    width:100vw;
-    height:900px; 
-    //background-color: gray;   
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    .ant-input-group-wrapper{        
-        width: 500px;
-        .ant-input-affix-wrapper{
-            border-top-left-radius: 10px;
-            border-bottom-left-radius: 2px;
-            //border : 0px;
-        }
-    }
-    .button-desc{
-        color:gray;
-        margin: 0 10px 0 0
-    }
-    .button{
-        cursor: pointer;
-        font-weight: 600;
-        font-size: medium;
-        &:hover{
-            font-weight: 700;
-        }
-    }
+.home-container {
+  margin-top: 70px;
 }
-
-
-.helper-container{
-    width:2000px;
-    height:1080px;
-    background-color: white;
-    
-    display: flex;
-    overflow: auto;
-    //align-items: center;
-    //justify-content: flex-start;
-    flex-direction: row;
-    .history-container{
-        width: 400px;
-        height: 100%;
-        background-color: #F8F8F8;
-        padding:28px;        
-        .history-box{
-            width: 100%;
-            background-color: white;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            padding: 12px 16px;
-            margin-bottom: 12px;
-            cursor:pointer;
-            .question{
-                font-weight: 400;
-                font-size: 12px;
-                line-height: 16px;
-                color: #787878;
-            }
-            .answer{
-                font-weight: 400;
-                font-size: 14px;
-                line-height: 22px;
-                color: #000000;
-            }
-        }
-    }
-
-    .question-container{
-        width:590px;
-        height:100%;
-        padding:30px;
-        .center-arrow{
-            width: 100%;
-            //height:100%;
-            display: flex;
-            padding-top: 100px;
-            align-items: flex-start;
-            justify-content: center;
-        }
-    }
-    .photo-container{
-        width:1000px;
-        height:100%;
-        padding:30px;
-    }
-    
-}
-
-
-.question-request-container{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 8px;
-    .question-request-button{
-        background-color:white;
-        border:0;
-        color:gray;
-        cursor: pointer;
-
-        display: flex;
-        align-items: center;
-        .desc{
-            margin: 0 3px 0 0;
-            font-size: 12px;
-        }
-    }
-}
-
-.answer-container{
-    margin-top: 40px;
-    .ant-form-item{
-        height:37px;
-        margin-bottom:8px;
-    }
-    .answer-example{
-        width:100%;
-        padding:0 20px 20px 20px;
-        // background-color: #494949;
-        display: flex;
-        flex-direction: column;
-        .answer-desc{
-            cursor: pointer;            
-            font-size: 14px;
-            line-height: 16px;
-            color: #787878;
-        }
-        .answer-example-list-container{
-            margin-top: 3px;
-            .answer-example-list{
-                // display: inline;
-                padding: 4px 14px;
-                border: 1px solid #A3A3A3;
-                border-radius: 43px;
-                margin-right: 5px;
-                margin-top: 5px;
-            }
-        }
-        
-    }
-}
-
-
-.showimage-button-container{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    
-}
-.showimage-box{
-    width: 800px;
-    padding: 15px 18px;
-    margin-bottom: 14px;
-    border: 1px solid #d9d9d9;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .showimage-content{
-        width: 100%;
-        // background-color: #787878;
-        margin-bottom: 12px;
-        display: flex;
-        .showimage-name-tag{
-            // width: 120px;
-            height:40px;
-            padding: 8px 20px;
-            border-radius: 40px;
-            margin-right: 10px;
-            background-color: lightseagreen;
-            //box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            color:white;
-            font-weight:500;
-        }
-        .showimage-desc{
-            padding: 0 10px;
-            width:78%;        
-            display: flex;
-            align-items: center;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 18px;
-            word-break: break-all;
-            color: #595959;
-            // background-color: #aaa;
-        }
-    }
-    .showimage-images{
-        display: flex;
-    }
-}
-
