--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,3 +1,11 @@
 .home-container {
-  margin-top: 70px;
+  margin-top: 60px;
+
+  width: 2000px;
+  height: 1080px;
+  background-color: white;
+
+  display: flex;
+  overflow: auto;
+  flex-direction: row;
 }
