--- a/src/components/Qna/Question/index.scss
+++ b/src/components/Qna/Question/index.scss
@@ -22,10 +22,37 @@
 }
 
 .question-examples {
-    width: 530px;
+    width: 510px;
     margin-bottom: 16px;
-    border: 0 solid;
+    border: 0;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     font-weight: 400;
+    
+}
+.question-input{
+    display: flex;
+    width: 510px;
+    .input{
+        width: 100%;
+        height: 34px;
+        margin-right: 16px;
+    }
+    .question-input-button{
+        width: 34px;
+        height: 34px;
+        border-radius: 17px;
+        padding: 1px 2px;
+        border:2px solid lightgray;
+        color:gray;
+        &:hover {
+            background-color: gray;
+            color:white;
+        }
+
+        &:focus {
+            background-color: gray;
+            color:white;
+        }
+    }
 }
